<resources>
    <string name="app_name">Rest with DataBinding</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>

    <string name="popular">Popular</string>
    <string name="popular_movies">Popular Movies</string>

    <string name="latest">Latest</string>
    <string name="latest_movies">Latest Movies</string>

    <string name="top_rated">Top Rated</string>
    <string name="top_rated_movies">Top Rated Movies</string>

</resources>
